src/content/ccip/v1/evm/tutorials/cross-chain-tokens/index.mdx
---
section: ccip
date: Last Modified
title: "Cross-Chain Token (CCT) Tutorials"
isIndex: true
metadata:
  description: "Make ERC-20 tokens CCIP‑compatible with the CCT standard. Learn deployment, pool setup, admin registration, configuration, and end‑to‑end testing."
  excerpt: "Create CCT, create cross chain token, deploy cross chain token, enable token for CCIP, make token cross chain compatible, cross chain token tutorial, ERC-20, ERC20, token, CCIP, CCT"
  image: "/images/ccip/CCIP_enabled_tokens_flowchart.jpg"
  datePublished: "2024-10-29"
  lastModified: "2025-05-19"
  estimatedTime: "50 minutes"
  difficulty: "intermediate"
---

import { Aside, ClickToZoom } from "@components"
import CcipCommon from "@features/ccip/CcipCommon.astro"

<Aside type="note" title="Prerequisites">
  Familiarize yourself with the [CCT standard](/ccip/v1/concepts/cross-chain-token/overview) and [CCIP
  architecture](/ccip/v1/concepts/architecture/overview) before proceeding with these tutorials.
</Aside>

Before diving into the [tutorials](#tutorials), it's important first to understand the overall procedure for enabling your tokens in CCIP. This procedure involves deploying tokens and token pools, registering administrative roles, and configuring token pools to enable secure token transfers using CCIP. The diagram below outlines the entire process:

<ClickToZoom
  src="/images/ccip/CCIP_enabled_tokens_flowchart.jpg"
  alt="Process for enabling a token in CCIP."
  style="display: block; margin: 0 auto; max-width: 100%; height: auto;"
/>

### Understanding the Procedure

The steps in the diagram highlight the flow of actions needed to enable a token for cross-chain transfers. These steps will be the foundation of the tutorials. Whether you're working with an Externally Owned Account (EOA) or a **Smart Account** (such as one using a multisig scheme), the overall logic remains the same. You'll follow the same process to enable cross-chain token transfers, configure pools, and register administrative roles.

In the following tutorials, we will walk through each step of the process to give you hands-on experience, from deploying your token to registering and configuring token pools. The process will apply equally whether you use an EOA or a Smart Account (such as with multisig transactions), ensuring flexibility across different account types.

### Key Steps to Keep in Mind:

1. **Token Deployment**: If the token is not yet deployed, you'll deploy an [ERC20-compatible token](/ccip/v1/evm/concepts/cross-chain-token/tokens).
2. **Admin Registration**: The token administrator must be registered in the [`TokenAdminRegistry`](/ccip/v1/evm/api-reference/v1.6.1/token-admin-registry) via self-service.
3. **Pool Deployment and Configuration**: [Token pools](/ccip/v1/evm/concepts/cross-chain-token/token-pools#common-requirements) are deployed, linked to tokens, and configured to manage cross-chain token transfers.

The tutorials will implement the logic of this process, which involves deploying and configuring token pools and registering administrative roles, step-by-step.

## Tutorials

- [Deploy Using Remix IDE](/ccip/v1/evm/tutorials/cross-chain-tokens/register-from-eoa-remix): Learn how to deploy and register cross-chain tokens using only your browser and Remix IDE.
  - No development environment setup required
  - Great for quick testing and learning

- [Register from an EOA (Burn & Mint)](/ccip/v1/evm/tutorials/cross-chain-tokens/register-from-eoa-burn-mint-hardhat): Learn how to register a cross-chain token with the **Burn & Mint** mechanism using an EOA.
  - [Hardhat version](/ccip/v1/evm/tutorials/cross-chain-tokens/register-from-eoa-burn-mint-hardhat)
  - [Foundry version](/ccip/v1/evm/tutorials/cross-chain-tokens/register-from-eoa-burn-mint-foundry)

- [Register from an EOA (Lock & Mint)](/ccip/v1/evm/tutorials/cross-chain-tokens/register-from-eoa-lock-mint-hardhat): Learn how to register a cross-chain token with the **Lock & Mint** mechanism using an EOA.
  - [Hardhat version](/ccip/v1/evm/tutorials/cross-chain-tokens/register-from-eoa-lock-mint-hardhat)
  - [Foundry version](/ccip/v1/evm/tutorials/cross-chain-tokens/register-from-eoa-lock-mint-foundry)

- [Set Token Pool Rate Limits](/ccip/v1/evm/tutorials/cross-chain-tokens/update-rate-limiters-hardhat): Learn how to set rate limits for token pools to control cross-chain token transfers.
  - [Hardhat version](/ccip/v1/evm/tutorials/cross-chain-tokens/update-rate-limiters-hardhat)
  - [Foundry version](/ccip/v1/evm/tutorials/cross-chain-tokens/update-rate-limiters-foundry)

- [Register from a Safe (Burn & Mint)](/ccip/v1/evm/tutorials/cross-chain-tokens/register-from-safe-burn-mint-hardhat): Learn how to register a cross-chain token with the **Burn & Mint** mechanism using a Safe Smart Account.
  - [Hardhat version](/ccip/v1/evm/tutorials/cross-chain-tokens/register-from-safe-burn-mint-hardhat)

- [Configure Additional Networks](/ccip/v1/evm/tutorials/cross-chain-tokens/configure-additional-networks-hardhat): Learn how to configure your cross-chain tokens and pools to operate on additional networks beyond the initial setup.
  - [Hardhat version](/ccip/v1/evm/tutorials/cross-chain-tokens/configure-additional-networks-hardhat)
  - [Foundry version](/ccip/v1/evm/tutorials/cross-chain-tokens/configure-additional-networks-foundry)

<CcipCommon callout="educationalDisclaimer" />
